add multiple create transactions

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,8 @@
 server {
   listen 80;
+  location /api {
+    proxy_pass https://saqtamaq.kz/;
+  }
   location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
