--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.64.2",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "ionicons": "^7.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
